# corecvs

./: geometryhandle.h
applications/build-qtnester-Desktop_Qt_5_12_2_GCC_64bit-Default/: qtnester.cbp  ui_gui_nester.h
applications/build-qtnester-Desktop_Qt_5_12_2_GCC_64bit-Default/qtnester_autogen/: mocs_compilation.cpp
applications/build-qtnester-Desktop_Qt_5_12_2_GCC_64bit-Default/qtnester_autogen/EWIEGA46WW/: moc_gui_nester.cpp
applications/nester/: CMakeLists.txt  convexpolygonnester.cpp  convexpolygonnester.h  convexpolygonplacer.cpp  convexpolygonplacer.h  convexpolygonselector.cpp  convexpolygonselector.h  main_nester.cpp  nester.cpp  nester.h  nester_geometry.cpp  nester_geometry.h  nesterhelpfulmethods.cpp  nesterhelpfulmethods.h
applications/nester/LegacyCode/: nester.cpp
applications/nester/NesterCore/: convexpolygonnester.cpp  convexpolygonnester.h  convexpolygonplacer.cpp  convexpolygonplacer.h  convexpolygonselector.cpp  nester_geometry.cpp  nester_geometry.h
applications/nester/Tests/: NesterTests.h  nestertests.cpp
applications/qtnester/: CMakeLists.txt  gui_nester.cpp  gui_nester.h  gui_nester.ui  main_qtnester.cpp  nesterhelpfulmethods.cpp  nesterhelpfulmethods.h
applications/qtnester/LegacyCode/: nester.h
applications/qtnester/NesterCore/: convexpolygonnester.cpp  convexpolygonnester.h  convexpolygonplacer.cpp  convexpolygonselector.h  nester_geometry.cpp
